채팅 구현 및 메시지 저장 및 가져오기 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   profiles:
-    include: oauth, view, database, ssl
+    include: view, database, ssl, redis
   devtools:
     livereload:
       enabled: true
